--- a/MoviesApi/appsettings.Development.json
+++ b/MoviesApi/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "angular_URL": "http://localhost:4200"
 }
