migrations save data

--- a/MoviesApi/appsettings.Development.json
+++ b/MoviesApi/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "angular_URL": "http://localhost:4200"
+  "angular_URL": "http://localhost:4200",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ADEELZAHID; Initial Catalog=MovieApi; Integrated Security=true"
+  }
 }
